<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.car_rent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_navigation_home_to_navigation_add_rental"
            app:destination="@id/navigation_add_rental" />

    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.car_rent.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >

        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_edit_rental"
            app:destination="@id/navigation_edit_rental" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.car_rent.ui.notifications.StatisticsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_stats" />

    <!-- AJOUT DES DIALOGUES ICI -->
    <dialog
        android:id="@+id/navigation_add_rental"
        android:name="com.example.car_rent.ui.rental.AddFragment"
        android:label="Ajouter une location"
        tools:layout="@layout/add_fragment" />

    <dialog
        android:id="@+id/navigation_edit_rental"
        android:name="com.example.car_rent.ui.rental.EditFragment"
        android:label="Modifier la location"
        tools:layout="@layout/edit_fragment" />
</navigation>